# tmc2-rs

./: .gitignore  Cargo.toml  README.md
src/: bitstream.rs  codec.rs  common.rs  decoder.rs  lib.rs  writer.rs
src/bitstream/: reader.rs
src/common/: math.rs  point_set3d.rs
src/encoder/: encoder.rs  encoder_parameters.rs  kd_tree.rs  mod.rs  normals_generator.rs  patch_segmenter.rs  vvtk_normal_estimation.rs
src/encoder/constants/: mod.rs  orientations.rs
src/formats/: mod.rs
test_files/pcd/: ascii2.pcd
