[package]
name = "tmc2rs"
version = "0.1.0"
authors = ["Bennett Clement <ben@benclmnt.com>"]
edition = "2021"
default-run = "decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tmc2rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
log = "0.4.17"
env_logger = { version = "0.10.0", default-features=false }
ffmpeg-next = { version = "6.1.1", default-features=false, features=["codec", "format"] }
tempfile = "3.3.0"
cgmath = "0.18.0"
fast-math = "0.1.1"
num_enum = "0.5.7"
crossbeam-channel = "0.5.6"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
byteorder = "1.5.0"
image = "0.25.2"
bincode = "2.0.0-rc.3"
bytemuck = "1.17.1"

unzip3 = "1.0.0"

vvtk = { git = "https://github.com/nus-vv-streams/vvtk/"}
rayon = "1.10.0"
approx = "0.5.1"

kdtree = "0.7.0"

nalgebra = "0.32.3"

[[bin]]
name = "decoder"

[profile.release]
debug = true
